test_cases/negative/compiler/services_exec_container_still_container.snek
export DEFAULT = Image("...")
    > WithService(
        Image("...") > Exec("..."),
        "..."
    );
